--- a/index.html
+++ b/index.html
@@ -270,7 +270,10 @@
                         <li>✅ Paiement mobile intégré</li>
                         <li>✅ 0% commission (vs Uber 25%)</li>
                     </ul>
-                    <a href="driver.html" class="btn-module">Découvrir DRIVER →</a>
+                    <!-- 👉 Inscription DRIVER -->
+                    <a href="https://beauville.github.io/digiy-chauffeur/" class="btn-module" target="_blank" rel="noopener">
+                        S’inscrire à DRIVER →
+                    </a>
                 </div>
 
                 <!-- LOC -->
@@ -285,7 +288,10 @@
                         <li>✅ Paiements sécurisés</li>
                         <li>✅ 0% commission (vs Booking 15%)</li>
                     </ul>
-                    <a href="loc.html" class="btn-module">Découvrir LOC →</a>
+                    <!-- 👉 Inscription générique portail -->
+                    <a href="https://beauville.github.io/portail-inscription/" class="btn-module" target="_blank" rel="noopener">
+                        S’inscrire à LOC →
+                    </a>
                     <a href="#paliers" class="btn-module small-link">Voir les paliers LOC ↓</a>
                 </div>
 
@@ -301,7 +307,9 @@
                         <li>✅ Liste d'attente smart</li>
                         <li>✅ +30% taux remplissage</li>
                     </ul>
-                    <a href="resa.html" class="btn-module">Découvrir RÉSA →</a>
+                    <a href="https://beauville.github.io/portail-inscription/" class="btn-module" target="_blank" rel="noopener">
+                        S’inscrire à RÉSA →
+                    </a>
                 </div>
 
                 <!-- RESTO PRO -->
@@ -317,7 +325,9 @@
                         <li>✅ Caisse intégrée</li>
                         <li>✅ Menu QR code</li>
                     </ul>
-                    <a href="resto.html" class="btn-module">Découvrir RESTO →</a>
+                    <a href="https://beauville.github.io/portail-inscription/" class="btn-module" target="_blank" rel="noopener">
+                        S’inscrire à RESTO PRO →
+                    </a>
                     <a href="#paliers" class="btn-module small-link">Voir les paliers RESTO PRO ↓</a>
                 </div>
 
@@ -333,7 +343,9 @@
                         <li>✅ Paiements multi-modes</li>
                         <li>✅ Rapports quotidiens</li>
                     </ul>
-                    <a href="pos.html" class="btn-module">Découvrir POS →</a>
+                    <a href="https://beauville.github.io/portail-inscription/" class="btn-module" target="_blank" rel="noopener">
+                        S’inscrire à POS →
+                    </a>
                 </div>
 
                 <!-- BUILD -->
@@ -348,7 +360,9 @@
                         <li>✅ Planning chantiers</li>
                         <li>✅ Galerie réalisations</li>
                     </ul>
-                    <a href="build.html" class="btn-module">Découvrir BUILD →</a>
+                    <a href="https://beauville.github.io/portail-inscription/" class="btn-module" target="_blank" rel="noopener">
+                        S’inscrire à BUILD →
+                    </a>
                 </div>
 
                 <!-- MARKET -->
@@ -363,7 +377,9 @@
                         <li>✅ Gestion stock</li>
                         <li>✅ 0% commission (vs Jumia 20%)</li>
                     </ul>
-                    <a href="market.html" class="btn-module">Découvrir MARKET →</a>
+                    <a href="https://beauville.github.io/portail-inscription/" class="btn-module" target="_blank" rel="noopener">
+                        S’inscrire à MARKET →
+                    </a>
                 </div>
 
                 <!-- PAY -->
@@ -378,7 +394,9 @@
                         <li>✅ QR Code paiement</li>
                         <li>✅ Multi-devises</li>
                     </ul>
-                    <a href="pay.html" class="btn-module">Découvrir PAY →</a>
+                    <a href="https://beauville.github.io/portail-inscription/" class="btn-module" target="_blank" rel="noopener">
+                        S’inscrire à PAY →
+                    </a>
                 </div>
 
                 <!-- JOBS -->
@@ -393,7 +411,9 @@
                         <li>✅ Tri automatique IA</li>
                         <li>✅ Entretiens vidéo</li>
                     </ul>
-                    <a href="jobs.html" class="btn-module">Découvrir JOBS →</a>
+                    <a href="https://beauville.github.io/portail-inscription/" class="btn-module" target="_blank" rel="noopener">
+                        S’inscrire à JOBS →
+                    </a>
                 </div>
             </div>
         </div>
@@ -718,11 +738,11 @@
                 <div class="footer-col">
                     <h4>Modules</h4>
                     <ul>
-                        <li><a href="driver.html">DIGIY DRIVER</a></li>
-                        <li><a href="loc.html">DIGIY LOC</a></li>
-                        <li><a href="resto.html">DIGIY RESTO</a></li>
-                        <li><a href="market.html">DIGIY MARKET</a></li>
-                        <li><a href="pay.html">DIGIY PAY</a></li>
+                        <li><a href="https://beauville.github.io/digiy-chauffeur/" target="_blank" rel="noopener">DIGIY DRIVER</a></li>
+                        <li><a href="https://beauville.github.io/portail-inscription/" target="_blank" rel="noopener">DIGIY LOC</a></li>
+                        <li><a href="https://beauville.github.io/portail-inscription/" target="_blank" rel="noopener">DIGIY RESTO</a></li>
+                        <li><a href="https://beauville.github.io/portail-inscription/" target="_blank" rel="noopener">DIGIY MARKET</a></li>
+                        <li><a href="https://beauville.github.io/portail-inscription/" target="_blank" rel="noopener">DIGIY PAY</a></li>
                     </ul>
                 </div>
 
