Add DIGIY RÉSA module to index.html

--- a/index.html
+++ b/index.html
@@ -960,6 +960,26 @@
                 <a href="https://beauville.github.io/commencer-a-payer/" class="cta-button">CHOISIR CE MODULE</a>
             </div>
 
+            <!-- DIGIY RÉSA - NOUVEAU -->
+            <div class="module-card">
+                <span class="module-icon">📅</span>
+                <h3 class="module-name">DIGIY RÉSA</h3>
+                <p class="module-desc">Réservations restaurant</p>
+                <div class="module-price">à partir de 9,900 F<small>/mois</small></div>
+                <ul class="module-features">
+                    <li>Planning temps réel</li>
+                    <li>Confirmations SMS</li>
+                    <li>Gestion tables complète</li>
+                    <li>0% commission</li>
+                </ul>
+                <div style="margin-top:15px;font-size:0.85rem;color:var(--gray);">
+                    <strong>Par nombre de tables:</strong><br>
+                    1-5: 9,900 F • 6-9: 15,000 F • 10-20: 25,000 F<br>
+                    21-30: 30,000 F • 30+: 50,000 F
+                </div>
+                <a href="https://beauville.github.io/commencer-a-payer/" class="cta-button">CHOISIR CE MODULE</a>
+            </div>
+
         </div>
     </section>
 
